--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <nav class="sticky-top">
-        <h1>Rapid Ops</h1>
-        <div>
+    <nav class="sticky-top navbar">
+        <h1 class="companyname">Rapid Ops</h1>
+        <div class="navdiv">
             <input type="text" placeholder="User Name" id="unamesi" class="hidden">
             <input type="password" placeholder="Password" id="pwordsi" class="hidden">
             <button class="signin" id="signinbutton" onclick="signin()">Sign in</button>
