--- a/Task 1/signup.html
+++ b/Task 1/signup.html
@@ -23,7 +23,7 @@
                 <input type="radio" id="studentSU" name="usertype" value="Student" class="suradio" checked>
                 <label for="studentSU" class="signupelement">Student</label>
             </div>
-            <button type="submit" id="register" onclick="adduser()" class="signupelement sutext">Register</button>
+            <button type="button" id="register" onclick="adduser()" class="signupelement sutext">Register</button>
             <button onclick="returntomain()" class="signupelement sutext">Return to Home</button>
         </form>
 
